<resources>
    <string name="app_name">Neighbourly</string>

    <string name="description_placeholder">I need help with cleaning my apartment, as I am currently injured. Contact me for payment details. Thank you!</string>
    <string name="user_desc_placeholder">Hi! I\'ve been in this neighbourhood for 20 years. I like to cook and have guests around to enjoy my food so do not be shy and come and say hi!</string>
    <string name="helper_desc_placeholder">Hi! I\'ve been in this neighbourhood for 20 years and have been enjoying helping around. My specialty is kitchen work so if you need any help always hit me up!</string>
    <string name="taskDescHint">I need help with cleaning my kitchen...</string>
    <string name="skills_placeholder">Plumbing, painting, teaching</string>
    <string name="google_maps_api_key">AIzaSyBRJ2xjSneXFyIJCvNvKPK01BTdV3BNx-k</string>

    <!-- CardView and Dialog buttons-->
    <string name="card_image_desc">Image showing the tasks posted by users</string>
    <string name="task_submitted_successfully">Task Submitted Successfully!</string>
    <string name="ok">OK</string>
    <string name="dialog_delete_task_confirmation">Are you sure you want to delete this task?</string>
    <string name="cancel">Cancel</string>

    <!-- Auth strings-->
    <string name="onboarding_description">Help is Just Around the Corner!</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_welcome_back">Welcome Back!</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_title">Create an Account</string>
    <string name="sign_up_name_hint">Enter name here</string>
    <string name="name_label">Name</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="sign_up_already_have_an_account">Already have an account?</string>
    <string name="app_logo">App\'s logo</string>

    <!-- Profile-->
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_label">Profile</string>
    <string name="settings">Settings</string>
    <string name="profile_image_content_desc">Profile Image</string>
    <string name="about_me_label">About Me</string>
    <string name="address_label">Address</string>
    <string name="helper_skills_label">Skills</string>
    <string name="helper_desc_label">Description</string>
    <string name="profile_no_tasks_posted_message">No tasks posted yet</string>
    <string name="name_hint">Your Name</string>
    <string name="edit_profile_email_hint">Your Email</string>
    <string name="edit_profile_about_me_hint">Tell the world about yourself</string>
    <string name="located_near_label">Located Near</string>
    <string name="helper_list_skill_hint">List your skills</string>
    <string name="save">Save</string>

    <!-- Home-->
    <string name="nearby_tasks_label">Nearby Tasks</string>
    <string name="see_all">See All</string>
    <string name="no_items_message">No items here!</string>
    <string name="header_image">Header Image</string>
    <string name="nearby_helpers_label">Nearby Helpers</string>
    <string name="post_task">Post Task</string>

    <!--Task/Helper Details-->
    <string name="description_label">Description</string>
    <string name="date_and_time_label">Date and Time</string>
    <string name="location_label">Location</string>
    <string name="message_btn">Message</string>
    <string name="location_icon_desc">A pin representing location icon</string>
    <string name="back_btn_desc">An arrow indicating back button</string>

    <!-- Post Task Page-->
    <string name="task_title">Task Title</string>
    <string name="post_task_title_hint">Cleaning</string>
    <string name="task_description">Task Description</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="upload_picture_label">Upload Picture</string>
    <string name="selected_image_preview">Selected Image Preview</string>
    <string name="submit_task_label">Submit Task</string>
    <string name="helper_img_desc">Image showing helper\'s face</string>

    <!--Chat-->
    <string name="user_pfp_desc">User\'s profile picture</string>
    <string name="user_name">User Name</string>
    <string name="input_message_hint">Type a message</string>
    <string name="icon_for_sending_message">Icon for sending message</string>
    <string name="no_chats_here">No chats here!</string>

    <!--Popups-->
    <string name="create_helper_account">Create Helper Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="switch_to_nearby_helpers">Switch to Nearby Helpers</string>
    <string name="switch_to_nearby_tasks">Switch to Nearby Tasks</string>
    <string name="about_me_hint">Edit Your Profile to Add a Description About Yourself!</string>
    <string name="no_address_added">No Address Added</string>
    <string name="no_skills_listed">No skills listed</string>
    <string name="helper_desc_hint">Edit Your Helper Profile to Add In Description!</string>
    <string name="tasks_posted">Tasks Posted</string>
    <string name="helper_description">Helper Description</string>
    <string name="tell_the_world_what_you_can_offer">Tell the world what you can offer!</string>
    <string name="set_location_hint">Click on the pin to set location</string>
    <string name="become_a_helper">Become a Helper?</string>
    <string name="is_a_helper">Is a Helper</string>
    <string name="about_task_poster">About Task Poster</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>

    <string name="location_permission_rationale">To find tasks and helpers near you, we need access to your device\'s location. This helps us provide accurate results based on your current location. Your location data will only be used for this purpose and not shared with others.</string>

</resources>