<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/onboardingImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/onboarding_img"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/onboardingLogInBtn"
        android:elevation="8dp"
        android:layout_width="@dimen/onboardingBtnWidth"
        android:layout_height="@dimen/onboardingBtnHeight"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="15dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        style="@style/authBtnWhite"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/onboardingDesc"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/onboardingDesc"
        app:layout_constraintTop_toBottomOf="@+id/onboardingSignUpBtn" />

    <TextView
        android:id="@+id/onboardingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/authTitle"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/onboardingImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/onboardingDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_description"
        android:textColor="#7F000000"
        android:textFontWeight="400"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/onboardingImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingTitle"
        app:layout_constraintVertical_bias="0.475" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/onboardingSignUpBtn"
        android:elevation="8dp"
        android:layout_width="@dimen/onboardingBtnWidth"
        android:layout_height="@dimen/onboardingBtnHeight"
        android:layout_gravity="center_horizontal"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="15dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="25sp"
        style="@style/authBtnBlue"
        app:layout_constraintBottom_toBottomOf="@+id/onboardingImg"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/onboardingDesc"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/onboardingDesc"
        app:layout_constraintTop_toBottomOf="@+id/onboardingDesc"
        app:layout_constraintVertical_bias="0.181" />


</androidx.constraintlayout.widget.ConstraintLayout>